<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HungryTest</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="navigation1">外卖</string>
 <string name="navigation2">订单</string>
  <string name="navigation3">发现</string>
   <string name="navigation4">我</string>
   <string name="waimai_tb1">便利店</string>
    <string name="waimai_tb2">品牌馆</string>
     <string name="waimai_tb3">水果</string>
      <string name="waimai_tb4">鲜花蛋糕</string>
       <string name="waimai_tb5">新店特惠</string>
        <string name="waimai_tb6">夜宵</string>
         <string name="waimai_tb7">预定早餐</string>
         <string name="dingdan_text1">订单</string>
         <string name="login_reg">注册</string>
         <string name="back">←</string>
         <string name="dingdan_dingdan">订单</string>
         <string name="dingdan_breakfast">早餐订单</string>
         <string name="login_psw_hint">登录密码</string>
         <string name="login_user_hint">手机/邮箱/用户名</string>
         <string name="login_login">登录</string>
         <string name="login_wx">微信</string>
         <string name="login_qq">QQ</string>
         <string name="login_xl">微博</string>
         <string name="faxian_logo">发现</string>
         <string name="faxian_xianshihaoli">限时好礼</string>
         <string name="faxian_gengduohaoli">更多好礼  ></string>
         <string name="faxian_gengduohaoli_button">更多好礼</string>
         <string name="wode_title">我的</string>
         <string name="wode_wodeyue">我的余额</string>
         <string name="wode_hongbao">红包</string>
         <string name="wode_jifen">我的积分</string>
         <string name="cart_tab_menu">菜单</string>
         <string name="cart_tab_evaluate">评价</string>
         <string name="cart_tab_seller">商家</string>
         <string name="seller_speed">分钟\n平均送餐时间</string>
         <string name="seller_min">元\n起送价</string>
         <string name="seller_dispatch">元\n配送费</string>
</resources>
